<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="cheat_button">Cheat</string>
    <string name="correct_popup">Correct!</string>
    <string name="incorrect_popup">Incorrect!</string>

    <!--Questions-->
    <string name="question_1">Should you eat cows?</string>
    <string name="question_2">Are cows cute?</string>
    <string name="question_3">Should mushrooms get haircuts?</string>
    <string name="question_4">Is milk for baby cows?</string>
</resources>
